Added working configurations with parameter forms.
At this point the project works, you can choose from two
configs (wireless2wired and wired2wireless) and you can
set the parameters to these configs using a html form.

--- a/files/p4config/www/index.html
+++ b/files/p4config/www/index.html
@@ -4,10 +4,16 @@
 <title>P4C Setup</title>
 </head>
 <body>
-<ul>
-<li><a href="wireless2wired.html">Wireless to Wired</a></li>
-<li><a href="wired-to-wifi.html">wired client</a></li>
-<li><a href="what-ever.html">...</a></li>
-</ul>
+<center>
+<br>
+<br>
+<br>
+<br>
+<a href="wireless2wired.html"><img src="wireless2wired.png" alt="Wireless to Wired"></a><br>
+<br>
+<br>
+<br>
+<a href="wired2wireless.html"><img src="wired2wireless.png" alt="Wired 2 Wireless"></a>
+</center>
 </body>
 </html>
