--- a/files/p4config/www/wired2wireless.html
+++ b/files/p4config/www/wired2wireless.html
@@ -7,19 +7,19 @@
 <body>
 
 <div id="stylized" class="myform">
-<div class="head"><img src="wireless2wired.png"></div>
+<div class="head"><img src="wired2wireless.png"></div>
 <form id="form" name="form" method="get" action="/cgi-bin/p4c.lua">
-<input type="hidden" name="p4c" id="p4c" value="wireless2wired" />
-<h1>Wireless to Wired</h1>
-<p>this configuration will share an internet connection from wireless to a computer connected via cable.</p>
+<input type="hidden" name="p4c" id="p4c" value="wired2wireless" />
+<h1>Wired to Wireless</h1>
+<p>this configuration will accept a connection from the wired cable and share this as a hotspot via wifi.</p>
 
 <label>SSID
-<span class="small">The SSID of the network</span>
+<span class="small">The SSID of the hotspot</span>
 </label>
 <input type="text" name="ssid" id="ssid" />
 
 <label>Password
-<span class="small">The network's password</span>
+<span class="small">The hotspot's password</span>
 </label>
 <input type="text" name="key" id="key" />
 
