HTML, CSS and image cleanup

--- a/files/p4config/www/index.html
+++ b/files/p4config/www/index.html
@@ -1,19 +1,20 @@
 <!DOCTYPE html>
 <html>
-<head>
-<title>P4C Setup</title>
-</head>
-<body>
-<center>
-<br>
-<br>
-<br>
-<br>
-<a href="wireless2wired.html"><img src="wireless2wired.png" alt="Wireless to Wired"></a><br>
-<br>
-<br>
-<br>
-<a href="wired2wireless.html"><img src="wired2wireless.png" alt="Wired 2 Wireless"></a>
-</center>
-</body>
+  <head>
+  	<meta charset="UTF-8">
+    <title>P4C Setup</title>
+    <link rel="stylesheet" href="style.css">
+  </head>
+  <body>
+    <div role="main">
+      <h1>How do you want to connect your networks?</h1>
+      <p>Click on the button below that matches your desired configuration.</p>
+      <div class="configicon">
+        <a href="wireless2wired.html" title="Share wireless connection with the wired network"><img src="wireless2wired.png" alt="Wireless to wired"></a>
+      </div>
+      <div class="configicon">
+        <a href="wired2wireless.html" title="Share wired connection with a wireless network as a Wi-Fi hotspot"><img src="wired2wireless.png" alt="Wired to wireless"></a>
+      </div>
+    </div>
+  </body>
 </html>
